stop page from jumping when scrolling

--- a/assets/css/map.less
+++ b/assets/css/map.less
@@ -3,7 +3,7 @@
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  overflow: none;
+  overflow: hidden;
 }
 
 #map img {
